--- a/WindowsFormsApplication4/WindowsFormsApplication4.csproj
+++ b/WindowsFormsApplication4/WindowsFormsApplication4.csproj
@@ -55,6 +55,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Functions\Actions.cs" />
+    <Compile Include="Functions\Support.cs" />
     <Compile Include="Functions\Status.cs" />
     <Compile Include="Functions\Rings.cs" />
     <Compile Include="Functions\Mana.cs" />
@@ -62,6 +63,8 @@
     <Compile Include="Functions\Window.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Structs\itemHeal.cs" />
+    <Compile Include="Structs\spellHeal.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
