--- a/WindowsFormsApplication4/WindowsFormsApplication4.csproj
+++ b/WindowsFormsApplication4/WindowsFormsApplication4.csproj
@@ -64,6 +64,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Functions\FileManager.cs" />
     <Compile Include="NativeMethods.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -81,8 +82,8 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Structs\Hotkeys.cs" />
-    <Compile Include="Structs\itemHeal.cs" />
-    <Compile Include="Structs\spellHeal.cs" />
+    <Compile Include="Structs\Item.cs" />
+    <Compile Include="Structs\Spell.cs" />
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
